--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 {
-	"$schema": "https://openapi.vercel.sh/vercel.json",
-	"version": 2,
-	"alias": "aghea.site",
-	"cleanUrls": true,
-	"public": true,
-	"regions": ["sin1"]
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
+  "alias": "aghea.site",
+  "cleanUrls": true,
+  "public": true,
+  "regions": ["sin1"],
+  "rewrites": [
+    { "source": "/.well-known/:path*", "destination": "/.well-known/:path*" }
+  ]
 }
