--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
 		"@vercel/analytics": "^1.1.1",
 		"date-fns": "^2.28.0",
 		"next": "^12.2.2",
-		"next-plugin-preact": "^3.0.7",
 		"next-sitemap": "^4.2.3",
-		"preact": "^10.19.3",
-		"preact-render-to-string": "^6.3.1",
-		"react": "npm:@preact/compat",
-		"react-dom": "npm:@preact/compat",
-		"react-ssr-prepass": "npm:preact-ssr-prepass",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sharp": "^0.33.5",
 		"spotify-web-api-node": "^5.0.2",
 		"swr": "^2.2.4"
 	},
